[package]
name = "roguelike"
version = "0.1.0"
authors = ["Daniel Rees <daniel.rees@autodata.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = {version = "0.3.6", default-features = false, features = ["fonts","saving"]}
